--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
-    "number_"
+    "number_of_destinato"
    ]
   },
   {
