Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def next_i"
+    "def next_up():\n",
+    "    "
    ]
   },
   {
