Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "print(next_up() # 'argentina'"
+    "next_up() # 'argentina'"
    ]
   },
   {
