--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -106,20 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "list_of_destinations = ['argentina', 'canada', 'croatia']\n",
-    "print(next_up()) # 'argentina'"
+    "print(next_up() # 'argentina'"
    ]
   },
   {
