--- a/index.ipynb
+++ b/index.ipynb
@@ -106,10 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "list_of_destinations = ['argentina', 'canada', 'croatia']"
+   ]
   },
   {
    "cell_type": "code",
