Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,8 +93,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def next_up():\n",
-    "    travel_destinations.pop()"
+    "def next_up(list):\n",
+    "    list.pop()"
    ]
   },
   {
