--- a/index.ipynb
+++ b/index.ipynb
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "def next_up(list):\n",
-    "    list.pop()"
+    "    return list.pop()"
    ]
   },
   {
