--- a/index.ipynb
+++ b/index.ipynb
@@ -88,13 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# define function here\n",
     "def next_up(list):\n",
-    "    return list.pop()"
+    "    return list.pop().title()"
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,14 +115,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "croatia\n"
+      "Croatia\n"
      ]
     }
    ],
