--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here"
+    "# define function here\n"
    ]
   },
   {
