Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -187,7 +187,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define function here\n"
+    "# define function here\n",
+    "def add_fa"
    ]
   },
   {
