Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,7 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def add_fa"
+    "def add_favorite_destination(string)"
    ]
   },
   {
