--- a/index.ipynb
+++ b/index.ipynb
@@ -188,7 +188,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def add_favorite_destination(string)"
+    "def add_favorite_destination(string):\n",
+    "    "
    ]
   },
   {
