Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -188,8 +188,8 @@
    "outputs": [],
    "source": [
     "# define function here\n",
-    "def add_favorite_destination(string):\n",
-    "    "
+    "def add_favorite_destination(list, string):\n",
+    "    list.append"
    ]
   },
   {
