--- a/index.ipynb
+++ b/index.ipynb
@@ -189,7 +189,7 @@
    "source": [
     "# define function here\n",
     "def add_favorite_destination(list, string):\n",
-    "    list.append"
+    "    return list.append(string)"
    ]
   },
   {
