--- a/index.ipynb
+++ b/index.ipynb
@@ -235,7 +235,8 @@
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "# define function here\n"
+    "# define function here\n",
+    "def cap"
    ]
   },
   {
