--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
-    "def cap"
+    "def capitalized_count"
    ]
   },
   {
