--- a/index.ipynb
+++ b/index.ipynb
@@ -236,7 +236,8 @@
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
-    "def capitalized_count"
+    "def capitalized_countries(list):\n",
+    "    retirn "
    ]
   },
   {
