Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -230,14 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "capitalized_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "# define function here\n",
     "def capitalized_countries(list):\n",
-    "    retirn "
+    "    return list.title()"
    ]
   },
   {
@@ -264,7 +264,7 @@
     }
    ],
    "source": [
-    "# capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "# \\\\capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
