--- a/index.ipynb
+++ b/index.ipynb
@@ -265,7 +265,7 @@
     }
    ],
    "source": [
-    "capitalize_countries() # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
+    "capitalize_countries(capita) # ['Argentina', 'Mexico', 'Italy', 'Finland', 'Canada', 'Croatia']"
    ]
   },
   {
